ValidacaoUnicoLiderEquipe em MEquipe
Inserção de uma validação personalizada para proibir a existência de mais de um líder por equipe.
(Não foi testado) (Testar)

Inserção também da validação EmailAdress em MUsuario

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "DBConnection": {
-    "Server": "localhost\\SQLEXPRESS",
+    "Server": "",
     "Database": "DesenVolve"
   },
   "AllowedHosts": "*"
