Implementa autenticação JWT
Mudanças:
- Adiciona middleware para autenticação JWT.
- Cria classe de ajuda 'TokenHelper' para ajuda na criação de tokens JWT.
- Cria controlador 'CCadastro' que por ora, é apenas um meio de exemplo e testes para o JWT.
- Adiciona seção JWT em AppSettings.cs, remove todas as configurações de arquivos onde eram necessárias

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -6,8 +6,12 @@
     }
   },
   "DBConnection": {
-    "Server": "",
+    "Server": "[SERVIDOR SQL]",
     "Database": "DesenVolve"
+  },
+  "JWT": {
+    "Secret": "[CHAVE JWT]",
+    "Issuer": "DesenVolve"
   },
   "AllowedHosts": "*"
 }
