Integração API frontend
Faz com que frontend consiga chamar APIs do backend com uma função de uso geral, perapara e configura CORS para desenvolvimento no backend e no frontend (Apenas em modo desenvolvimento em ambos os ambientes).

--- a/backend/appsettings.json.template
+++ b/backend/appsettings.json.template
@@ -13,5 +13,8 @@
     "Secret": "[CHAVE JWT]",
     "Issuer": "DesenVolve"
   },
+  "CORS": {
+    "AllowedHosts": "http://localhost:5001"
+  }
   "AllowedHosts": "*"
 }
