--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/lab": "^5.0.0-alpha.164",
     "@mui/material": "^5.15.7",
+    "@mui/x-date-pickers": "^6.19.3",
+    "dayjs": "^1.11.10",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
